--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "ConvoTalk Chat Application",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "install-frontend": "cd frontend && npm install --legacy-peer-deps",
     "install-backend": "cd backend && npm install",
@@ -19,9 +20,15 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "selenium-webdriver": "^4.38.0",
+    "socket.io-client": "^4.8.1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^6.2.0",
+    "mocha": "^11.7.5"
+  }
 }
